JS Audio player is fixed to bottom of display.
Make things easier to stop audio during play and scroll through playlist
at the same time.

--- a/includes/index.css
+++ b/includes/index.css
@@ -5,7 +5,26 @@ header { display: block; background: url('./divider.png') bottom center no-repea
 h1 { display: inline; position: relative; margin: 0ex 0ex 1ex 1.2ex; font-family: 'bpreplay', sans-serif; font-weight: normal; font-size: 42px; letter-spacing: 1px; }
 h1:before { content: '♬ '; position: absolute; top: 16px; left: -3.1ex; color: #da1c5c; font-size: 0.4em; }
 
-.audiojs { margin: 15px 0px 20px; }
+#mainpage .mainbtn {
+    font-size: .8em;
+}
+
+.ui-title {
+   margin: 0 !important;
+   padding: 0 !important;
+}
+
+.playerBar {
+    position: fixed;
+    display:block;
+    float:left;
+    z-index: 2000;
+    bottom: -20px;
+    right: 0;
+}
+
+.audiojs { width: inherit;margin: 15px auto 20px auto; }
+.audiojs .time {float: none}
 h2 { font-family: 'bpreplay', sans-serif; font-weight: normal; font-size: 24px; margin-bottom: 10px; line-height: 1.6; }
 
 .download { background: url('./divider.png') top center no-repeat, url('./divider.png') bottom center no-repeat; margin: 30px 0px; padding: 20px 0px; text-align: center; }
